--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,18 @@
             <span
               *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched"
               class="help-block"
+              >
+            <span
+              *ngIf="signupForm.get('userData.username').errors['nameIsForbidden']"
             >
-              Please enter a valid username!
+              This name is invalid!
             </span>
+            <span
+              *ngIf="signupForm.get('userData.username').errors['required']"
+            >
+              This field is required!
+            </span>
+          </span>
           </div>
           <div class="form-group">
             <label for="email">email</label>
